--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header class="header">
+    <button class="menu-toggle">☰</button>
     <h1 class="title__h1">Jérémy Abelard</h1>
     <nav class="nav">
         <ul class="nav__list">
