--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
   </footer>
 
   <!-- Script principal -->
-  <script type="module" src="/script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
